src/test/ui/borrowck/borrowck-mut-slice-of-imm-vec.stderr
error[E0596]: cannot borrow immutable local variable `v` as mutable
  --> $DIR/borrowck-mut-slice-of-imm-vec.rs:7:16
   |
LL |     let v = vec![1, 2, 3];
   |         - help: make this binding mutable: `mut v`
LL |     write(&mut v); //~ ERROR cannot borrow
   |                ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
